# kgateway

./: .custom-gcl.yml  .gitattributes  .gitignore  .golangci.yaml  .goreleaser.ci.yaml.envsubst  .goreleaser.local.amd64.yaml  .goreleaser.local.arm64.yaml  .goreleaser.local.yaml.envsubst  .goreleaser.yaml  AGENTS.md  CODEOWNERS  Makefile  RELEASE.md  go.mod  go.sum  osv-scanner.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: RELEASE-REQUEST.md
.github/workflows/: backfill-semver-chart-tags-explicit.yaml  cache-setup.yaml  check-labels.yaml  conformance.yaml  e2e.yaml  formal-verification.yaml  helm-schema-verify.yaml  lint.yaml  nightly-tests.yaml  osv-scanner.yaml  pr-unit-tests.yaml  release.yaml  stalebot.yaml  unit.yaml
.goreleaser/: Chart.yaml  values.yaml
api/: README.md
design/: 13586-referenced-only-cluster-discovery.md  13666-envoy-bootstrap-config.md  13849-renovate-for-lts-branches.md  http-extauth-service.md  rerun-only-failed-e2e-subtests.md
examples/: example-http-route-with-attached-http-listener-options.yaml  example-http-route-with-attached-traffic-policy.yaml  example-http-route-with-header-modifier.yaml  example-http-route.yaml  example-svc-with-attached-backend-config-policy.yaml
hack/: build-crds-yaml.sh  generate-goreleaser-ci.sh  generate-release-notes.sh  generate.sh  goreleaser  goreleaser.sh  osvtool  run-e2e-test.sh  xds-consistency-check.sh
internal/envoy_modules/module-init/: Cargo.toml
internal/envoy_modules/module-init/src/: lib.rs
pkg/sds/: run.go
python/: requirements-dev.txt
tools/: go.mod  go.sum
(+1159 files in other folders)
