[package]
name = "module-init"
version = "0.1.0"
edition = "2021"

[dependencies]
envoy-proxy-dynamic-modules-rust-sdk = { workspace = true }
rustformation-filter = { path = "../filters/rustformation" }
# To add a new module: add it as a dependency here.
# See docs/adding-a-module.md for the full process.

[lib]
name = "rust_module"
path = "src/lib.rs"
crate-type = ["cdylib"]
